routes/sdmt/route-login.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: login
    app.kubernetes.io/component: login
    app.kubernetes.io/instance: login
    app.kubernetes.io/name: mbsvc
  name: login
  namespace: megabank-be
spec:
  host: login-megabank-be.apps.sdmt.cpolab.ibm.com
  port:
    targetPort: 9080-tcp
  to:
    kind: Service
    name: login
